test/libsolidity/syntaxTests/parsing/multiple_event_arg_trailing_comma.sol
contract test {
    event Test(uint a, uint b,);
    function(uint a) {}
}
// ----
// ParserError: (45-46): Unexpected trailing comma in parameter list.
